force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AdditionalInformation__c</fullName>
    <description>Additional information for Async Request</description>
    <inlineHelpText>Additional information for Async Request</inlineHelpText>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>