force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__CustomObjectId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CustomObjectId__c</fullName>
    <description>ID of the associated custom object</description>
    <inlineHelpText>ID of the associated custom object</inlineHelpText>
    <label>Custom Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>