force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__DocumentFormat__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentFormat__c</fullName>
    <description>The output format of the merged document</description>
    <label>Document Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>RTF</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>