force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__EndTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EndTime__c</fullName>
    <description>Call end time</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>