force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__ProtectionLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ProtectionLevel__c</fullName>
    <description>The protection level applied to the merged document.</description>
    <label>Protection Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full access</fullName>
            </value>
            <value>
                <fullName>Insert comments and tracked changes only</fullName>
            </value>
            <value>
                <fullName>Insert comments only</fullName>
            </value>
            <value>
                <fullName>Fill in form fields only</fullName>
            </value>
            <value>
                <fullName>Read only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>