force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__Response__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Response__c</fullName>
    <description>Used to store the response from MergeService and XAJS</description>
    <inlineHelpText>Response represents the output from external systems</inlineHelpText>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>