force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__VersionDetailId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionDetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated document version detail</description>
    <inlineHelpText>ID of the associated document version detail</inlineHelpText>
    <label>Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Async Merge Calls</relationshipLabel>
    <relationshipName>AsyncMergeCalls</relationshipName>
    <type>Lookup</type>
</CustomField>