force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus_Proposal__EnableCollateInfo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__EnableCollateInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether collate info is enabled for the quote/proposal</description>
    <inlineHelpText>Indicates whether collate info is enabled for the quote/proposal</inlineHelpText>
    <label>Enable Collate Info</label>
    <type>Checkbox</type>
</CustomField>