force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus_Proposal__QuoteProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__QuoteProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated quote/proposal</description>
    <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>AsyncMergeCalls</relationshipName>
    <type>Lookup</type>
</CustomField>